assets/scss/common/_custom.scss
/* ... */
.sidebar-item-list-item-selected>.sidebar-subcategory,
.sidebar-item-list-item-selected>.sidebar-item,
// Beat _buttons.scss
.sidebar-item.sidebar-item:hover,
.sidebar-subcategory.sidebar-subcategory:hover {
    background-color: var(--sidebar-item-list-item-selected-background);
    border-radius: 4px;
}

.index-logo {
    color: var(--index-logo-color);
}

.section-sm {
    padding-top: 0;
}

.tutorial-divider {
    margin-top: 12px;
    margin-bottom: 24px;
    color: var(--tutorial-divider-color);
    opacity: 1;
}

.tutorial-link-container {
    display: flex;
    flex-direction: column;
    row-gap: 12px;
}

code {
    display: inline-block;
    padding-top: 0;
    padding-bottom: 0;
    background: var(--code-color) !important;
    padding: 0 8px;
    font-family: $monoFont;
    line-height: 22px;
    letter-spacing: 0.0025em;
}

[data-dark-mode] body a code:not(.hljs) {
    color: var(--article-link-color)
}

[data-dark-mode] body code:not(.hljs) a {
    color: var(--article-link-color)
}

.pagination {
    justify-content: center;
    margin-top: 48px;
}

// Beat _dark.scss selectors
.page-item.active .page-link.page-link,
.page-link.page-link.page-link:hover {
    background-color: var(--sidebar-item-list-item-selected-background);
    color: var(--sidebar-item-active-color);
    border-color: var(--sidebar-bottom-border);
}

.back-button {
    display: flex;
    align-items: center;
    gap: 12px;
    padding-bottom: 12px;
}

#notification {
    position: fixed;
    bottom: 48px;
    right: 48px;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 24px;
    gap: 12px;
    width: 368px;
    height: 72px;
    background: var(--notification-background);
    color: var(--notification-color);
    border-radius: 8px;
    opacity: 0;
    pointer-events: none;
}

.notification-toast {
    animation: toast 2s linear;
}

@keyframes toast {

    0%,
    100% {
        opacity: 0;
    }

    10%,
    90% {
        opacity: 1;
    }
}

.step {
    display: inline-block;
    text-align: center;
    vertical-align: bottom;
    // With inherent text spacing, adds up to 12
    margin-right: 5px;
    width: 31px;
    border-radius: 4px;
    font-weight: 500;
    font-size: 16px;
    background: var(--step-background);
}

// Cap content at 100% - leftnav - rightnav (if has-toc)
.docs-content {
    max-width: calc(100dvw - 352px);
}

.docs-content.has-toc {
    max-width: calc(100dvw - 616px);
}

// Reduce center padding under specified screen width
@media (max-width: $ReduceContentPaddingWidth) {
    .docs-content {
        padding-left: 3em;
        padding-right: 3em;
    }
}

// Hide TOC under specified screen width
@media (max-width: $HideTocWidth) {
    .docs-toc {
        display: none;
    }

    // Cap content at 100% - leftnav
    .docs-content,
    .docs-content.has-toc {
        max-width: calc(100dvw - 330px);
    }
}

// Cap content to a constant on big screen size
@media (min-width: $MaxContentLayoutWidth) {

    .docs-content,
    .docs-content.has-toc {
        max-width: $MaxContentWidth;
    }
}

// Cap content at 100% in mobile layout
@media (max-width: $MobileLayoutWidth) {

    .docs-content,
    .docs-content.has-toc {
        max-width: 100%;
    }
}

// Beat <a> reset
.docs-content.docs-content a:not(.tag),
.card-link.card-link.card-link.card-link {
    color: var(--article-link-color);
}

h4, .h4 {
    font-family: $titleFont;
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    line-height: 112%;
    letter-spacing: -0.02em;
}

blockquote p a {
    color: var(--blockquote-link-color) !important;
}

.note,.cta {
    padding: 1em;
    background:  var(--note-cta-background);
    color: var(--note-cta) !important;
    a {
    color: var(--note-cta-link) !important;
    }
}

.section-cta {
    padding-top: 1em;
    padding-bottom: 1em;
    margin-top: 1em;
    margin-bottom: -3em;
;}



.figure, .figure-img, .img-fluid {
    display: block !important;
    margin: auto !important;
    max-height: 45em;
    max-width: 100%;
    width: auto;
    height: auto;
    object-fit: contain;
    /* Optional but recommended to prevent any stretching */
    scale: 1;
    transform: scale(1);
}.figure, .figure-img, .img-fluid {
    display: block !important;
    margin: auto !important;
    max-height: 45em;
    width: auto;
    max-width: 100%;
}

